{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 33,
  "lineage": "3456644a-289b-7ba9-e96e-7c28e2554f1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0120d7c619752e44e",
            "domain": "vpc",
            "id": "eipalloc-0120d7c619752e44e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-210-116-94.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.116.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:internet-gateway/igw-0fe4c504ea28488d2",
            "id": "igw-0fe4c504ea28488d2",
            "owner_id": "360478807392",
            "tags": {
              "Name": "main-vpc-IGW"
            },
            "tags_all": {
              "Name": "main-vpc-IGW"
            },
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "dependencies": [
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0120d7c619752e44e",
            "association_id": "eipassoc-09f655ea6859a95af",
            "connectivity_type": "public",
            "id": "nat-032a4148c0c9e931c",
            "network_interface_id": "eni-0dc6dd1b64bda34f6",
            "private_ip": "10.0.10.139",
            "public_ip": "34.210.116.94",
            "subnet_id": "subnet-06c4e820ed1b439db",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.main-gw",
            "aws_s3_bucket.b",
            "aws_subnet.main_public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:route-table/rtb-0e33cbb918f990ad6",
            "id": "rtb-0e33cbb918f990ad6",
            "owner_id": "360478807392",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-032a4148c0c9e931c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-nat"
            },
            "tags_all": {
              "Name": "main-private-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_s3_bucket.b",
            "aws_subnet.main_public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:route-table/rtb-06b3bbb89ce502fe2",
            "id": "rtb-06b3bbb89ce502fe2",
            "owner_id": "360478807392",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe4c504ea28488d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-route-table"
            },
            "tags_all": {
              "Name": "main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e2188653164171d",
            "route_table_id": "rtb-0e33cbb918f990ad6",
            "subnet_id": "subnet-05975f4b4fe769e0c"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private-table",
            "aws_s3_bucket.b",
            "aws_subnet.main_private-1",
            "aws_subnet.main_public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a4e5d5301008cb",
            "route_table_id": "rtb-0e33cbb918f990ad6",
            "subnet_id": "subnet-0c92ff05355b1407a"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private-table",
            "aws_s3_bucket.b",
            "aws_subnet.main_private-2",
            "aws_subnet.main_public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4298c76ba829d46",
            "route_table_id": "rtb-0e33cbb918f990ad6",
            "subnet_id": "subnet-07a3d96fe5a94fd4d"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private-table",
            "aws_s3_bucket.b",
            "aws_subnet.main_private-3",
            "aws_subnet.main_public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbf1ecaef857c0ac",
            "route_table_id": "rtb-06b3bbb89ce502fe2",
            "subnet_id": "subnet-06c4e820ed1b439db"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-route-table",
            "aws_s3_bucket.b",
            "aws_subnet.main_public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f60daf6649acbfa",
            "route_table_id": "rtb-06b3bbb89ce502fe2",
            "subnet_id": "subnet-08c85e1b108c9c89f"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-route-table",
            "aws_s3_bucket.b",
            "aws_subnet.main_public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02587d0f509848d1e",
            "route_table_id": "rtb-06b3bbb89ce502fe2",
            "subnet_id": "subnet-098f91a3d03c01712"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-route-table",
            "aws_s3_bucket.b",
            "aws_subnet.main_public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:subnet/subnet-05975f4b4fe769e0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05975f4b4fe769e0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360478807392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "dependencies": [
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:subnet/subnet-0c92ff05355b1407a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c92ff05355b1407a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360478807392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-2"
            },
            "tags_all": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "dependencies": [
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:subnet/subnet-07a3d96fe5a94fd4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a3d96fe5a94fd4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360478807392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-3"
            },
            "tags_all": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "dependencies": [
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:subnet/subnet-06c4e820ed1b439db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c4e820ed1b439db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360478807392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public-1"
            },
            "tags_all": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "dependencies": [
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:subnet/subnet-08c85e1b108c9c89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c85e1b108c9c89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360478807392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public-2"
            },
            "tags_all": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "dependencies": [
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:subnet/subnet-098f91a3d03c01712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098f91a3d03c01712",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360478807392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public-3"
            },
            "tags_all": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0538c18fac17435b2"
          },
          "dependencies": [
            "aws_s3_bucket.b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:360478807392:vpc/vpc-0538c18fac17435b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d40aa7119d308000",
            "default_route_table_id": "rtb-0d55a1037708bb7ce",
            "default_security_group_id": "sg-0ec3343f3f9fde67e",
            "dhcp_options_id": "dopt-0af5991f29ed13f0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0538c18fac17435b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d55a1037708bb7ce",
            "owner_id": "360478807392",
            "tags": {
              "Email": "ssvkart5@gmail.com",
              "Env": "Prod",
              "Name": "ssvkart-vpc"
            },
            "tags_all": {
              "Email": "ssvkart5@gmail.com",
              "Env": "Prod",
              "Name": "ssvkart-vpc"
            }
          },
          "dependencies": [
            "aws_s3_bucket.b"
          ]
        }
      ]
    }
  ]
}